--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             }
 
             try {
-                const response = await fetch('YOUR_GOOGLE_APPS_SCRIPT_URL', {
+                const response = await fetch('https://script.google.com/macros/s/AKfycbzbrfvpU1olK5sEahoQXPDe5uXO74xDSktMGv22_df5MvFDrD9OjdRTkqc19vA-8Tg_Jg/exec', {
                     method: 'POST',
                     mode: 'no-cors',
                     headers: {
